# taar1

./: Cargo.toml  README.md
.cargo/: config.toml
design/: taar1-arm.FCStd  taar1-assembly.FCStd  taar1-mount.FCStd  taar1-reference-parts.FCStd  taar1-stepper-gear.FCStd
src/: command_parser.rs  inverse_kinematics.rs  lib.rs  main.rs  motion.rs
